jarss Release Notes


Version 1.0-... 
    Eine vorläufige Version, die sich zur Zeit noch in Bearbeitung befindet.
    A preliminary version that is still under construction.

 - Deutsch
    - In den Konfigurationsdateien wurde irrtümlich ein Höchstwert von 365 Tagen für die Aufbewahrung von Versionen angegeben. Die Angabe wurde entfernt und die betreffenden Textstellen überarbeitet.
    - Anzeigefehler in der rsync-Fehleranalyse nach rsync-Lauf in der jarss.sh Datei behoben

 - English
    - The configuration files incorrectly specified a maximum value of 365 days for version retention. The information has been removed and the relevant text has been revised.
    - Fixed display error in rsync error analysis after rsync run in jarss.sh file


Version 1.0-100 vom 05.12.2024
 - Deutsch
    - In den Konfigurationsdateien wurden "Wichtige Hinweise" hinzugefügt, die darüber informieren, welche Einstellungen für ein lokales, Pull- oder Push-Backup vorgenommen werden müssen.
    - Im jarss Backup-Skript wurde eine Abfrage hinzugefügt, die zu einem Abbruch führt, wenn in der Konfiguration sowohl ein Pull- als auch ein Push-Backup ausgewählt wurde, d.h. wenn sowohl die Variable sshpull als auch die Variable sshpush Werte enthalten.
 - English
    - Important Notes' have been added to the configuration files to provide information on the settings required for a local, pull or push backup.
    - A query has been added to the jarss backup script that causes an abort if both a pull and push backup are selected in the configuration, i.e. if both the sshpull and sshpush variables contain values.


Version 1.0-000 vom 28.11.2024
 - Deutsch
    - Veröffentlichung von jarss (just another rsync shell script)
 - English
    - Release of jarss (just another rsync shell script)